--- a/src/main/resources/static/views/home.html
+++ b/src/main/resources/static/views/home.html
@@ -4,10 +4,9 @@
             <div class="col-lg-8 col-lg-offset-2" ng-controller="MainController as cntrl">
                 <h2>Welcome to Anna'nas Manager!</h2>
                 <p>This application will help you to save your time and plan your work.</p>
-                <sign-in-form></sign-in-form>
+                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" ng-click="showSignIn()">Sing in</button>
                 <button type="button" class="btn btn-info btn-lg" data-toggle="modal" ng-click="showSignUp()">Sing up</button>
             </div>
-
         </div>
 
     </section>
