--- a/src/main/resources/static/views/home.html
+++ b/src/main/resources/static/views/home.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container color-black">
     <section class="content-section text-center vertical-center">
         <div class="container">
             <div class="col-lg-8 col-lg-offset-2" ng-controller="MainController as cntrl">
