--- a/src/main/resources/static/views/SignInModal.html
+++ b/src/main/resources/static/views/SignInModal.html
@@ -41,9 +41,9 @@
                             type="submit"
                             class="btn btn-info"
                             ng-click="login()">
-                        Sign up
+                        Sign in
                     </button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
                 </div>
             </form>
         </div>
