--- a/src/main/resources/static/views/signUpModal.html
+++ b/src/main/resources/static/views/signUpModal.html
@@ -167,7 +167,7 @@
                             ng-click="submit(user)">
                         Sign up
                     </button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
                 </div>
             </form>
         </div>
