--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -828,7 +828,7 @@ hr {
 }
 
 .navbar-static-side ul li.active a {
-background: #3e77ab; /* Old browsers */
+background: #1e1e1e; /* Old browsers */
   transition: 0.2s all ease-in-out;
   outline: none;
   color:#FFF;
@@ -1151,7 +1151,7 @@ background: #303030; /* Old browsers */
 }
 /* End Left Sidebar Collapsed */
 .page-content {
-  padding: 20px 20px 50px 20px;
+  padding: 20px 20px 50px 270px;
   min-height: 700px;
 }
 #footer {
