editing todo done + fixed styles sidebar

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -55,6 +55,11 @@ body {
 .p-l-270{
     padding-left: 270px;
 }
+
+.p-t-50{
+    padding-top: 50px;
+}
+
 .usr-name-li{
     height: 49px;
     padding-top: 3px;
