--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -122,6 +122,7 @@ hr {
   width: 100%;
   min-height: 100%;
   background-color: #3C3C3C;
+  padding-top: 50px;
 }
 #page-wrapper {
   min-height: 100%;
@@ -142,6 +143,7 @@ hr {
   height: 50px;
 }
 #topbar.navbar-default {
+  position: fixed;
   border: 0;
 }
 #topbar .navbar-header {
@@ -1017,8 +1019,9 @@ background: #303030; /* Old browsers */
 @media (min-width: 768px) {
   .navbar-static-side {
     z-index: 1;
-    position: absolute;
+    position: fixed;
     width: 250px;
+    height: 100%;
   }
 }
 .right-sidebar #topbar .navbar-header {
