--- a/src/main/resources/static/views/todoList.html
+++ b/src/main/resources/static/views/todoList.html
@@ -26,20 +26,50 @@
         </div>
     </div>
     <div class="panel-body">
-        <div ng-if="tasks.length == 0">You have no tasks yet.</div>
+        <div ng-if="tasks.length == 0">Relax, you have nothing to do :)</div>
         <table class="table table-hover table-striped" ng-if="tasks.length > 0">
             <thead>
             <tr>
-                <th>Description</th>
-                <th>Priority</th>
-                <th>Date added</th>
-                <th>Status</th>
-                <th>Deadline</th>
+                <th>
+                    <a href ng-click="sortType = 'description'; sortReverse = !sortReverse">
+                        Description
+                        <span ng-show="sortType == 'description' && !sortReverse" class="fa fa-caret-down"></span>
+                        <span ng-show="sortType == 'description' && sortReverse" class="fa fa-caret-up"></span>
+                    </a>
+                </th>
+                <th>
+                    <a href ng-click="sortType = 'priority'; sortReverse = !sortReverse">
+                        Priority
+                        <span ng-show="sortType == 'priority' && sortReverse" class="fa fa-caret-down"></span>
+                        <span ng-show="sortType == 'priority' && !sortReverse" class="fa fa-caret-up"></span>
+                    </a>
+                </th>
+                <th>
+                    <a href ng-click="sortType = 'createDate'; sortReverse = !sortReverse">
+                        Date added
+                        <span ng-show="sortType == 'createDate' && !sortReverse" class="fa fa-caret-down"></span>
+                        <span ng-show="sortType == 'createDate' && sortReverse" class="fa fa-caret-up"></span>
+                    </a>
+                </th>
+                <th>
+                    <a href ng-click="sortType = 'status'; sortReverse = !sortReverse">
+                        Status
+                        <span ng-show="sortType == 'status' && sortReverse" class="fa fa-caret-down"></span>
+                        <span ng-show="sortType == 'status' && !sortReverse" class="fa fa-caret-up"></span>
+                    </a>
+                </th>
+                <th>
+                    <a href ng-click="sortType = 'deadline'; sortReverse = !sortReverse">
+                        Deadline
+                        <span ng-show="sortType == 'deadline' && !sortReverse" class="fa fa-caret-down"></span>
+                        <span ng-show="sortType == 'deadline' && sortReverse" class="fa fa-caret-up"></span>
+                    </a>
+                </th>
                 <th>Actions</th>
             </tr>
             </thead>
             <tbody>
-            <tr ng-repeat="task in tasks">
+            <tr ng-repeat="task in tasks | orderBy:sortType:sortReverse:prioritiesComparator">
                 <td>{{task.description}}</td>
                 <td>
                     <span
@@ -56,14 +86,14 @@
                     <span ng-class="{
                             'label label-sm label-default': task.status == 'NEW',
                             'label label-sm label-warning': task.status == 'IN_PROGRESS',
-                            'label label-sm label-success': task.status == 'LOW'
+                            'label label-sm label-success': task.status == 'COMPLETE'
                         }">
                         {{task.status}}
                     </span>
                 </td>
                 <td>{{task.deadline | date:'mediumDate'}}</td>
                 <td>
-                    <a><i class="fa fa-pencil"></i></a>&nbsp;
+                    <a href ng-click="openEdit(task)"><i class="fa fa-pencil"></i></a>&nbsp;
                     <a href ng-click="delete(task.id)"><i class="fa fa-trash-o"></i></a>&nbsp;
                 </td>
             </tr>
