exception handling done

--- a/src/main/resources/static/views/editTodoTask.html
+++ b/src/main/resources/static/views/editTodoTask.html
@@ -93,7 +93,7 @@
                                 </label>
                             </div>
                         </div>
-                        <div ng-if="errorMessage" class="alert alert-danger m-t-15">{{ errorMessage }}</div>
+                        <div ng-if="errorMessage" class="alert alert-danger m-t-15"><strong>Oops! </strong>{{ errorMessage }}</div>
                     </div>
                     <div class="form-actions text-right pal">
                         <button
