--- a/src/main/resources/static/views/signUpModal.html
+++ b/src/main/resources/static/views/signUpModal.html
@@ -157,7 +157,7 @@
                         </select>
                     </div>
                     <small>*all fields are required</small>
-                    <div ng-if="errorMessage" class="alert alert-danger m-t-15">{{ errorMessage }}</div>
+                    <div ng-if="errorMessage" class="alert alert-danger m-t-15"><strong>Oops! </strong>{{ errorMessage }}</div>
                 </div>
                 <div class="modal-footer">
                     <button
