--- a/src/main/resources/static/views/todoList.html
+++ b/src/main/resources/static/views/todoList.html
@@ -14,7 +14,7 @@
         </div>
     </div>
 
-    <div ng-if="errorMessage" class="alert alert-danger m-t-15">{{ errorMessage }}</div>
+    <div ng-if="errorMessage" class="alert alert-danger m-t-15"><strong>Oops! </strong>{{ errorMessage }}</div>
 
 <div class="panel panel-red m-10">
     <div class="panel-heading height-50">
