projects + project detais pages added

--- a/src/main/resources/static/views/projects-dev.html
+++ b/src/main/resources/static/views/projects-dev.html
@@ -1,3 +1,342 @@
 <div>
-    Projects DEV
+    <div id="title-breadcrumb-option-demo" class="page-title-breadcrumb">
+        <div class="page-header pull-left">
+            <div class="page-title">
+                Projects
+            </div>
+            <div>
+                Here are projects you were invited to by your team leader.
+                As developer you are not allowed to create your own projects.
+            </div>
+        </div>
+
+        <div class="clearfix">
+        </div>
+    </div>
+
+    <div ng-if="errorMessage" class="alert alert-danger m-t-15"><strong>Oops! </strong>{{ errorMessage }}</div>
+
+    <div class="mbl p-t-15">
+        <div class="col-lg-4">
+            <div class="panel">
+                <div class="panel-body">
+                    <div class="profile">
+                        <div style="margin-bottom: 15px" class="row">
+                            <div class="p-t-b-10">
+                                <div>
+                                    <div class="project-name">
+                                        <h2>
+                                            Project Name
+                                        </h2>
+                                    </div>
+                                    <div class="p-t-7 f-r">
+                                        <a href class="info-project"><i class="fa fa-info-circle fa-font-16" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                                <div>
+                                    <p>
+                                        <strong>Description:</strong>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                        eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                        Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                                        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                                        mollit anim id est laborum.
+                                    </p>
+                                </div>
+                                <div>
+                                    <p>
+                                        <strong>Deadline:</strong>
+                                        10/10/2010
+                                    </p>
+                                </div>
+                                <div>
+                                    <p>
+                                        <strong>Team leader:</strong>
+                                        Ootka Shoobakova
+                                    </p>
+                                </div>
+
+                            </div>
+
+                        </div>
+                        <div class="row text-center divider">
+                            <div class="col-xs-12 col-sm-4 emphasis">
+                                <h2>
+                                    <strong>20</strong></h2>
+                                <p>
+                                    <small>New tasks</small>
+                                </p>
+                                <button class="btn btn-red btn-block">
+                                    <span class="fa fa-plus-circle"></span>&nbsp; New
+                                </button>
+                            </div>
+                            <div class="col-xs-12 col-sm-4 emphasis">
+                                <h2>
+                                    <strong>157</strong></h2>
+                                <p>
+                                    <small>Approved tasks</small>
+                                </p>
+                                <button class="btn btn-green btn-block">
+                                    <span class="fa fa-check-circle"></span>&nbsp; Approved
+                                </button>
+                            </div>
+                            <div class="col-xs-12 col-sm-4 emphasis">
+                                <h2>
+                                    <strong>245</strong></h2>
+                                <p>
+                                    <small>All tasks</small>
+                                </p>
+                                <button class="btn btn-yellow btn-block">
+                                    <span class="fa fa-list"></span>&nbsp; All
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <div class="panel">
+                <div class="panel-body">
+                    <div class="profile">
+                        <div style="margin-bottom: 15px" class="row">
+                            <div class="p-t-b-10">
+                                <div>
+                                    <div class="project-name">
+                                        <h2>
+                                            Project Name
+                                        </h2>
+                                    </div>
+                                    <div class="p-t-7 f-r">
+                                        <a href class="info-project"><i class="fa fa-info-circle fa-font-16" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                                <div>
+                                    <p>
+                                        <strong>Description:</strong>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                        eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                        Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                                        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                                        mollit anim id est laborum.
+                                    </p>
+                                </div>
+                                <div>
+                                    <p>
+                                        <strong>Deadline:</strong>
+                                        10/10/2010
+                                    </p>
+                                </div>
+                                <div>
+                                    <p>
+                                        <strong>Team leader:</strong>
+                                        Ootka Shoobakova
+                                    </p>
+                                </div>
+
+                            </div>
+
+                        </div>
+                        <div class="row text-center divider">
+                            <div class="col-xs-12 col-sm-4 emphasis">
+                                <h2>
+                                    <strong>20</strong></h2>
+                                <p>
+                                    <small>New tasks</small>
+                                </p>
+                                <button class="btn btn-red btn-block">
+                                    <span class="fa fa-plus-circle"></span>&nbsp; New
+                                </button>
+                            </div>
+                            <div class="col-xs-12 col-sm-4 emphasis">
+                                <h2>
+                                    <strong>157</strong></h2>
+                                <p>
+                                    <small>Approved tasks</small>
+                                </p>
+                                <button class="btn btn-green btn-block">
+                                    <span class="fa fa-check-circle"></span>&nbsp; Approved
+                                </button>
+                            </div>
+                            <div class="col-xs-12 col-sm-4 emphasis">
+                                <h2>
+                                    <strong>245</strong></h2>
+                                <p>
+                                    <small>All tasks</small>
+                                </p>
+                                <button class="btn btn-yellow btn-block">
+                                    <span class="fa fa-list"></span>&nbsp; All
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <div class="panel">
+                <div class="panel-body">
+                    <div class="profile">
+                        <div style="margin-bottom: 15px" class="row">
+                            <div class="p-t-b-10">
+                                <div>
+                                    <div class="project-name">
+                                        <h2>
+                                            Project Name
+                                        </h2>
+                                    </div>
+                                    <div class="p-t-7 f-r">
+                                        <a href class="info-project"><i class="fa fa-info-circle fa-font-16" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                                <div>
+                                    <p>
+                                        <strong>Description:</strong>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                        eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                        Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                                        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                                        mollit anim id est laborum.
+                                    </p>
+                                </div>
+                                <div>
+                                    <p>
+                                        <strong>Deadline:</strong>
+                                        10/10/2010
+                                    </p>
+                                </div>
+                                <div>
+                                    <p>
+                                        <strong>Team leader:</strong>
+                                        Ootka Shoobakova
+                                    </p>
+                                </div>
+
+                            </div>
+
+                        </div>
+                        <div class="row text-center divider">
+                            <div class="col-xs-12 col-sm-4 emphasis">
+                                <h2>
+                                    <strong>20</strong></h2>
+                                <p>
+                                    <small>New tasks</small>
+                                </p>
+                                <button class="btn btn-red btn-block">
+                                    <span class="fa fa-plus-circle"></span>&nbsp; New
+                                </button>
+                            </div>
+                            <div class="col-xs-12 col-sm-4 emphasis">
+                                <h2>
+                                    <strong>157</strong></h2>
+                                <p>
+                                    <small>Approved tasks</small>
+                                </p>
+                                <button class="btn btn-green btn-block">
+                                    <span class="fa fa-check-circle"></span>&nbsp; Approved
+                                </button>
+                            </div>
+                            <div class="col-xs-12 col-sm-4 emphasis">
+                                <h2>
+                                    <strong>245</strong></h2>
+                                <p>
+                                    <small>All tasks</small>
+                                </p>
+                                <button class="btn btn-yellow btn-block">
+                                    <span class="fa fa-list"></span>&nbsp; All
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-4">
+            <div class="panel">
+                <div class="panel-body">
+                    <div class="profile">
+                        <div style="margin-bottom: 15px" class="row">
+                            <div class="p-t-b-10">
+                                <div>
+                                    <div class="project-name">
+                                        <h2>
+                                            Project Name
+                                        </h2>
+                                    </div>
+                                    <div class="p-t-7 f-r">
+                                        <a href class="info-project"><i class="fa fa-info-circle fa-font-16" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                                <div>
+                                    <p>
+                                        <strong>Description:</strong>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                        eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                        Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                                        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                                        mollit anim id est laborum.
+                                    </p>
+                                </div>
+                                <div>
+                                    <p>
+                                        <strong>Deadline:</strong>
+                                        10/10/2010
+                                    </p>
+                                </div>
+                                <div>
+                                    <p>
+                                        <strong>Team leader:</strong>
+                                        Ootka Shoobakova
+                                    </p>
+                                </div>
+
+                            </div>
+
+                        </div>
+                        <div class="row text-center divider">
+                            <div class="col-xs-12 col-sm-4 emphasis">
+                                <h2>
+                                    <strong>20</strong></h2>
+                                <p>
+                                    <small>New tasks</small>
+                                </p>
+                                <button class="btn btn-red btn-block">
+                                    <span class="fa fa-plus-circle"></span>&nbsp; New
+                                </button>
+                            </div>
+                            <div class="col-xs-12 col-sm-4 emphasis">
+                                <h2>
+                                    <strong>157</strong></h2>
+                                <p>
+                                    <small>Approved tasks</small>
+                                </p>
+                                <button class="btn btn-green btn-block">
+                                    <span class="fa fa-check-circle"></span>&nbsp; Approved
+                                </button>
+                            </div>
+                            <div class="col-xs-12 col-sm-4 emphasis">
+                                <h2>
+                                    <strong>245</strong></h2>
+                                <p>
+                                    <small>All tasks</small>
+                                </p>
+                                <button class="btn btn-yellow btn-block">
+                                    <span class="fa fa-list"></span>&nbsp; All
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
