--- a/src/main/resources/static/views/todoList.html
+++ b/src/main/resources/static/views/todoList.html
@@ -6,7 +6,7 @@
                 ToDo List
             </div>
             <div>
-                This is tour own todo list. Just add all the tasks that you need to do.
+                This is your own todo list. Just add all the tasks that you need to do.
             </div>
         </div>
 
