--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -44,6 +44,10 @@ body {
     margin-right: 5px;
 }
 
+.m-l-10{
+    margin-left: 10px;
+}
+
 .m-t-15{
     margin-top: 15px;
 }
@@ -52,12 +56,36 @@ body {
     margin: 10px;
 }
 
+.m-b-10 {
+    margin-bottom: 10px;
+}
+
+.m-l-14{
+    margin-left: 14px;
+}
+
 .p-l-270{
     padding-left: 270px;
 }
 
 .p-t-50{
     padding-top: 50px;
+}
+
+.p-t-7{
+    padding-top: 7px;
+}
+
+.p-t-15{
+    padding-top: 15px;
+}
+
+.p-l-17{
+    padding-left: 17px;
+}
+
+.p-t-b-10{
+    padding: 0 10px;
 }
 
 .usr-name-li{
@@ -88,4 +116,49 @@ body {
 .k-header
 {
     width: 100% !important;
+}
+
+.info-project {
+    opacity: 0.6;
+}
+
+.info-project:hover {
+    opacity: 1;
+    color: inherit;
+}
+
+.fa-font-16{
+    font-size: 16px !important;
+}
+
+.project-name{
+    float: left;
+    width: 95%;
+}
+
+.new-proj-btn {
+    width: 10%;
+    margin-left: 15px;
+    margin-bottom: 15px;
+}
+
+.attached-files-list{
+    border-top: 1px solid #e5e5e5;
+    padding: 5px;
+}
+
+.light-grey{
+    border-color: #e5e5e5;
+}
+
+.text-right{
+    text-align: right;
+}
+
+.input-border-light{
+    border: 1px solid #e5e5e5;
+}
+
+.border-none{
+    border: none;
 }
