--- a/src/main/resources/static/views/navBar.html
+++ b/src/main/resources/static/views/navBar.html
@@ -8,7 +8,7 @@
 
             <ul class="nav navbar navbar-top-links navbar-right mbn">
                 <li class="dropdown topbar-user usr-name-li">
-                    <a data-toggle="dropdown" href="#!/dashboard" class="dropdown-toggle">
+                    <a data-toggle="dropdown" href class="dropdown-toggle">
                     <span class="hidden-xs" ng-model="name">{{name}}</span>&nbsp;<span class="caret"></span></a>
                     <ul class="dropdown-menu dropdown-user pull-right">
                         <li><a href="#"><i class="fa fa-user"></i>My Profile</a></li>
