--- a/src/main/resources/static/views/projects-dev.html
+++ b/src/main/resources/static/views/projects-dev.html
@@ -33,16 +33,12 @@
                                         <a href class="info-project"><i class="fa fa-info-circle fa-font-16" aria-hidden="true"></i></a>
                                     </div>
                                 </div>
-                                <div>
+                                <div class="project_blocks">
                                     <p>
                                         <strong>Description:</strong>
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                                         eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                                        Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                                        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                                        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                                        mollit anim id est laborum.
+
                                     </p>
                                 </div>
                                 <div>
@@ -113,16 +109,13 @@
                                         <a href class="info-project"><i class="fa fa-info-circle fa-font-16" aria-hidden="true"></i></a>
                                     </div>
                                 </div>
-                                <div>
+                                <div class="project_blocks">
                                     <p>
                                         <strong>Description:</strong>
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                                         eiusmod tempor incididunt ut labore et dolore magna aliqua.
                                         Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                                        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                                        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                                        mollit anim id est laborum.
+                                        laboris nisi ut aliquip ex ea commodo consequat.
                                     </p>
                                 </div>
                                 <div>
@@ -193,7 +186,7 @@
                                         <a href class="info-project"><i class="fa fa-info-circle fa-font-16" aria-hidden="true"></i></a>
                                     </div>
                                 </div>
-                                <div>
+                                <div class="project_blocks">
                                     <p>
                                         <strong>Description:</strong>
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -201,8 +194,7 @@
                                         Ut enim ad minim veniam, quis nostrud exercitation ullamco
                                         laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
                                         in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                                        mollit anim id est laborum.
+
                                     </p>
                                 </div>
                                 <div>
@@ -274,16 +266,14 @@
                                         <a href class="info-project"><i class="fa fa-info-circle fa-font-16" aria-hidden="true"></i></a>
                                     </div>
                                 </div>
-                                <div>
+                                <div class="project_blocks">
                                     <p>
                                         <strong>Description:</strong>
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                                         eiusmod tempor incididunt ut labore et dolore magna aliqua.
                                         Ut enim ad minim veniam, quis nostrud exercitation ullamco
                                         laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                                        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                                        mollit anim id est laborum.
+                                        in reprehenderit in voluptate velit esse cillum
                                     </p>
                                 </div>
                                 <div>
