files downloading done

--- a/src/main/resources/static/views/sideMenu.html
+++ b/src/main/resources/static/views/sideMenu.html
@@ -6,25 +6,25 @@
             <ul id="side-menu" class="nav">
 
                 <div class="clearfix"></div>
-                <li ng-class="{active: $state.current.name == 'dashboard.projects'}">
+                <li ng-class="{active: $state.current.name == 'home.projects'}">
                     <a ui-sref="home.projects"><i class="fa fa-folder-open fa-fw">
                     <div class="icon-bg bg-orange"></div>
                 </i><span class="menu-title">Projects</span></a>
                 </li>
 
-                <li ng-class="{active: $state.current.name == 'dashboard.todo'}">
+                <li ng-class="{active: $state.current.name == 'home.todo'}">
                     <a ui-sref="home.todo"><i class="fa fa-tasks fa-fw">
                     <div class="icon-bg bg-pink"></div>
                 </i><span class="menu-title">ToDo List</span></a>
                 </li>
 
-                <li ng-class="{active: $state.current.name == 'dashboard.calendar'}">
+                <li ng-class="{active: $state.current.name == 'home.calendar'}">
                     <a ui-sref="home.calendar"><i class="fa fa-calendar fa-fw">
                     <div class="icon-bg bg-green"></div>
                 </i><span class="menu-title">Calendar</span></a>
                 </li>
 
-                <li ng-class="{active: $state.current.name == 'dashboard.charts'}">
+                <li ng-class="{active: $state.current.name == 'home.charts'}">
                     <a ui-sref="home.charts"><i class="fa fa-bar-chart-o fa-fw">
                     <div class="icon-bg bg-orange"></div>
                 </i><span class="menu-title">Charts</span></a>
