--- a/src/main/resources/static/views/projectInfo-tl.html
+++ b/src/main/resources/static/views/projectInfo-tl.html
@@ -106,11 +106,30 @@
                         <span ng-if="project.files.length == 1">file</span>
                         <span ng-if="project.files.length != 1">files</span>
                     </p>
-                    <div ng-repeat="file in project.files" class="attached-files-list">
-                        <i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;
-                        <span>{{file.name}}</span>
+                    <div ng-repeat="file in project.files" ng-switch="getFileExt(file.name)" class="attached-files-list">
+                        <i ng-switch-when="pdf" class="fa fa-file-pdf-o" aria-hidden="true"></i>
+                        <i ng-switch-when="doc" class="fa fa-file-word-o" aria-hidden="true"></i>
+                        <i ng-switch-when="docx" class="fa fa-file-word-o" aria-hidden="true"></i>
+                        <i ng-switch-when="zip" class="fa fa-file-archive-o" aria-hidden="true"></i>
+                        <i ng-switch-when="png" class="fa fa-file-image-o" aria-hidden="true"></i>
+                        <i ng-switch-when="psd" class="fa fa-file-image-o" aria-hidden="true"></i>
+                        <i ng-switch-when="jpeg" class="fa fa-file-image-o" aria-hidden="true"></i>
+                        <i ng-switch-when="jpg" class="fa fa-file-image-o" aria-hidden="true"></i>
+                        <i ng-switch-when="txt" class="fa fa-file-text-o" aria-hidden="true"></i>
+                        <i ng-switch-when="ppt" class="fa fa-file-powerpoint-o" aria-hidden="true"></i>
+                        <i ng-switch-when="pptx" class="fa fa-file-powerpoint-o" aria-hidden="true"></i>
+                        <i ng-switch-when="csv" class="fa fa-file-excel-o" aria-hidden="true"></i>
+                        <i ng-switch-when="xls" class="fa fa-file-excel-o" aria-hidden="true"></i>
+                        <i ng-switch-when="xlsx" class="fa fa-file-excel-o" aria-hidden="true"></i>
+                        <i ng-switch-when="htm" class="fa fa-file-code-o" aria-hidden="true"></i>
+                        <i ng-switch-when="html" class="fa fa-file-code-o" aria-hidden="true"></i>
+                        <i ng-switch-when="css" class="fa fa-file-code-o" aria-hidden="true"></i>
+                        <i ng-switch-when="js" class="fa fa-file-code-o" aria-hidden="true"></i>
+                        <i ng-switch-when="java" class="fa fa-file-code-o" aria-hidden="true"></i>
+                        <i ng-switch-default class="fa fa-file-o" aria-hidden="true"></i>
+                        <span>&nbsp;{{file.name}}</span>
                         <div class="f-r">
-                            <i class="fa fa-download" aria-hidden="true"></i>&nbsp;
+                            <a href ng-click="download(file.id)" target="_blank"><i class="fa fa-download" aria-hidden="true"></i></a>&nbsp;
                             <i class="fa fa-trash-o" aria-hidden="true"></i>
                         </div>
                     </div>
